force-app/main/default/objects/MultiCloudAutomation__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Provide the name of the action. This value is case sensitive and must match one of the values in the Copado Actions global value set.</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>