force-app/main/default/objects/MultiCloudAutomation__mdt/fields/Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Template__c</fullName>
    <label>Job Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>