force-app/main/default/objects/MultiCloudAutomation__mdt/fields/Platform_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Platform_Configuration__c</fullName>
    <label>Platform Configuration</label>
    <referenceTo>ExtensionPackageConfiguration__mdt</referenceTo>
    <relationshipLabel>MultiCloudAutomations</relationshipLabel>
    <relationshipName>MultiCloudAutomations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>